--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
     
     </p>
+    <img src="html5-css3-logo_1.gif">
     <h2> This is amazing </h1>
     <p>
       Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
@@ -46,7 +47,8 @@
     Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
     
     </p>
-  
+    <img src="random.jpg">
+    <p> Jackson Gonzalez </p>
   
   
   </body>
