--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
     
     </p>
-    <img src="html5-css3-logo_1.gif">
+    <img src="html5-css3-logo_1.gif" alt="The Html5 logo"<!–– this is comment , alt gives image name-->>
+    <a href="https://www.udemy.com" target="_blank"> Link to Udemy <!–– external link --> </a>
+     <a href="html5-css3-logo_1.gif" target="_blank"> Html logo <!–– internal link --> </a>
     <h2> This is amazing </h1>
     <p>
       Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
@@ -47,10 +49,14 @@
     Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
     
     </p>
-    <img src="random.jpg">
+    <img src="random.jpg" alt="Autor photo">
     <p> Jackson Gonzalez </p>
   
   
   </body>
   
 </html>
+<!–– CSS can be added in 3 ways. 
+1. code inside Html tag with style.
+2. code inside Html document with style.
+3. css code expernal file -->
