--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
     
     </p>
-    <img src="html5-css3-logo_1.gif" alt="The Html5 logo"<!–– this is comment , alt gives image name-->>
+    <img src="html5-css3-logo_1.gif" alt="The Html5 logo"> <!–– this is comment , alt gives image name-->
     <a href="https://www.udemy.com" target="_blank"> Link to Udemy <!–– external link --> </a>
      <a href="html5-css3-logo_1.gif" target="_blank"> Html logo <!–– internal link --> </a>
-    <h2> This is amazing </h1>
+    <h2> This is amazing </h2>
     
     <p class="main-text">
       Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
