mistake in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2> This is my first blog post </h2>
     
     <p class="main-text">
-    This is a very <strong> strong </strong> text, because it is <strong> bold </strong>.
+    what This is a very <strong> strong </strong> text, because it is <strong> bold </strong>.
     I would like to <em> emphasize </em>  how important it is to fallow this course until end!
     This is some <u> underline  </u> text.<br> breake the text<br>
       Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
