--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title> My first blog post</title>
-    <link rel="stylesheet" type= "text/css" href="style.css"> <!–– connect css file to html -->
+    <link rel="stylesheet" type= "text/css" href="style.css"> 
   </head>
   <body>
-    <div class="container"> <!–– press i to edit css -->
+    <div class="container"> 
       <div class="blog-post"> 
         <h1> My first blog post </h1>
         <h2> This is my first blog post </h2>
@@ -27,9 +27,9 @@
           Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. 
           Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
         </p>
-        <img src="html5-css3-logo_1.gif" alt="The Html5 logo"> <!–– this is comment , alt gives image name-->
-        <a href="https://www.udemy.com" target="_blank"> Link to Udemy <!–– external link --> </a>
-        <a href="html5-css3-logo_1.gif" target="_blank"> Html logo <!–– internal link --> </a>
+        <img src="html5-css3-logo_1.gif" alt="The Html5 logo"> 
+        <a href="https://www.udemy.com" target="_blank"> Link to Udemy  </a>
+        <a href="html5-css3-logo_1.gif" target="_blank"> Html logo </a>
         <h2> This is amazing </h2>
         <p class="main-text">
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
@@ -58,9 +58,5 @@
     </div>
   </body>
   </html>
-  <!–– CSS can be added in 3 ways. 
-    1. code inside Html tag with style.
-    2. code inside Html document with style.
-    3. css code expernal file -->
-  <!–– -->
+ 
 
